<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person"
            app:titleTextColor="@color/nav_menu_text"
            android:title="@string/nav_profile"/>

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            app:titleTextColor="@color/nav_menu_text"
            android:title="@string/nav_settings"/>

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit"
            app:titleTextColor="@color/nav_menu_text"
            android:title="@string/exit"/>
    </group>
</menu>